Remove SH_EMULATE_BUILT_IN_FUNCTIONS dependencies.

BUG=642227
TEST=gpu_unittests
R=qiankun.miao@intel.com
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2297663005
Cr-Commit-Position: refs/heads/master@{#415727}

Former-commit-id: 680a3f54ee58fe56d69c756a3d425344f45bc1ae